25.3 platform: Opening necessary java.base/jdk.internal.ref